# PQC_Master_Thesis_2026

./: .gitmodules  CMakeLists.txt  installCryptoAPI.sh  main.cpp
Client/: ClientApp.cpp
Core/include/: Application.h  ApplicationConsole.h  ApplicationGUI.h  AvatarUtils.h  BotanCryptography.h  Buffer.h  BufferStream.h  ChatPanel.h  Client.h  ClientLayer.h  Common.h  Console.h  ConsoleGUI.h  FileDialog.h  FileDialog.mm  Image.h  KeyCodes.h  Layer.h  LogCustomFormatters.h  MacOSWindow.h  MacOSWindow.mm  NetworkExecutor.h  P2PCredentialGenerator.h  PrivateChatCore.h  PrivateChatSession.h  Random.h  Serialization.h  Server.h  ServerLayer.h  ServerPacket.h  StreamWriter.h  StringUtils.h  Theme.h  Types.h  UserInfo.h  WolfTypes.h
Core/src/: Application.cpp  ApplicationConsole.cpp  ApplicationGUI.cpp  BotanCryptography.cpp  ChatPanel.cpp  Client.cpp  ClientLayer.cpp  Console.cpp  ConsoleGUI.cpp  Image.cpp  Input.cpp  NetworkExecutor.cpp  NetworkingUtils.cpp  PrivateChatSession.cpp  Random.cpp  Server.cpp  ServerLayer.cpp  ServerPacket.cpp  StreamReader.cpp  Theme.cpp  UI.cpp  UserInfo.cpp
Server/: ServerApp.cpp
include/: Application.h  BufferStream.h  ClientLayer.h  Console.h  Image.h  Input.h  Log.h  NetworkingUtils.h  SafiraAssert.h  ServerPacket.h  StreamReader.h  Theme.h  Timer.h  UI.h  UserInfo.h
src/: Application.cpp  BufferStream.cpp  Client.cpp  ClientLayer.cpp  Console.cpp  Image.cpp  Input.cpp  Log.cpp  NetworkingUtils.cpp  Random.cpp  ServerPacket.cpp  StreamWriter.cpp  StringUtils.cpp
